--- a/index.html
+++ b/index.html
@@ -17,21 +17,19 @@
             <div class="header__title">ohmyfood</div>
             <div class="header__icon">
                 <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a> <!-- vérifier le lien -->
-                
             </div>
         </header>
         <main>
             <!-- location -->
-            <section class="location">
+            <div class="location">
                 <i class="fa-solid fa-location-dot"></i>
                 <p>Paris, Belleville</p>
-                </form>
-            </section>
+            </div>
             <!-- explore -->
             <section class="explore">
                 <h1>Réservez le menu qui vous convient</h1>
                 <p>Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
-                <button class="btn"><a href="#">Explorer nos restaurants</a></button>
+                <a class="btn" href="#">Explorer nos restaurants</a>
             </section>
             <!-- search -->
             <section class="search">
@@ -58,9 +56,12 @@
                         <div class="card__new">
                             <p>Nouveau</p>
                         </div>
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
                         <div class="card__icon">
+                            <label>
+                                <input type="checkbox">
+                            </label>
                         </div>
+                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
                         <div class="card__content">
                             <h3>La palette du goût</h3>
                             <p>Ménilmontant</p>
@@ -70,28 +71,41 @@
                         <div class="card__new">
                             <p>Nouveau</p>
                         </div>
+                        <div class="card__icon">
+                            <label>
+                                <input type="checkbox">
+                            </label>
+                        </div>
                         <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de restaurant">
                         <div class="card__content">
                             <h3>La note enchantée</h3>
                             <p>Charonne</p>
-                            <div class="card__content__icon"></div>
                         </div>
                     </article> 
                 </div>
                 <div class="food-cards">
                     <article class="card">
+                        <div class="card__icon">
+                            <label>
+                                <input type="checkbox">
+                            </label>
+                        </div>
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de restaurant">
                         <div class="card__content">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                            <div class="card__content__icon"></div>
+                            <h3>À la française</h3>
+                            <p>Cité Rouge</p>
                         </div>
                     </article> 
                     <article class="card">
+                        <div class="card__icon">
+                            <label>
+                                <input type="checkbox">
+                            </label>
+                        </div>
                         <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de restaurant">
                         <div class="card__content">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
+                            <h3>Le délice des sens</h3>
+                            <p>Folie-Méricourt</p>
                             <div class="card__content__icon"></div>
                         </div>
                     </article> 
