--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     <div class="container">
+        <div class="loader">
+            <div class="clock">
+                <div class="clock__center"></div>
+                <div class="clock__little">
+                    <img src="assets/images/icons/fork.svg" alt="fork">
+                </div>
+                <div class="clock__big">
+                    <img src="assets/images/icons/knife.svg" alt="knife">
+                </div>
+                <div class="loader__logo">ohmyfood</div>
+            </div>
+        </div>
         <header>
             <div class="header__title">ohmyfood</div>
             <div class="header__icon">
@@ -87,7 +99,7 @@
                     <article class="card">
                         <div class="card__icon">
                             <label>
-                                <input type="checkbox">
+                                <input type="checkbox" name="checbox">
                             </label>
                         </div>
                         <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de restaurant">
