--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/da9e139664.js" crossorigin="anonymous"></script>
-    <title>ohmyfood</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <title>ohmyfood</title>
 </head>
 <body>
     <div class="container">
-        <div class="loader">
+<!--         <div class="loader">
             <div class="clock">
                 <div class="clock__center"></div>
                 <div class="clock__little">
@@ -24,12 +24,9 @@
                 </div>
                 <div class="loader__logo">ohmyfood</div>
             </div>
-        </div>
+        </div> -->
         <header>
             <div class="header__title">ohmyfood</div>
-            <div class="header__icon">
-                <a href="./index.html"><i class="fa-solid fa-arrow-left"></i></a> <!-- vérifier le lien -->
-            </div>
         </header>
         <main>
             <!-- location -->
