add one restaurant page

--- a/index.html
+++ b/index.html
@@ -62,20 +62,22 @@
                 <h2>Restaurants</h2>
                 <div class="food-cards">
                     <article class="card">
-                        <div class="card__new">
-                            <p>Nouveau</p>
-                        </div>
-                        <div class="card__icon">
-                            <label>
-                                <input type="checkbox">
-                            </label>
-                        </div>
-                        <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
-                        <div class="card__content">
-                            <h3>La palette du goût</h3>
-                            <p>Ménilmontant</p>
-                        </div>
-                    </article> 
+                        <a href="./restaurants/palette.du.gout.html">
+                                <div class="card__new">
+                                    <p>Nouveau</p>
+                                </div>
+                                <div class="card__icon">
+                                    <label>
+                                        <input type="checkbox">
+                                    </label>
+                                </div>
+                                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
+                                <div class="card__content">
+                                    <h3>La palette du goût</h3>
+                                    <p>Ménilmontant</p>
+                                </div>
+                            </a>
+                        </article> 
                     <article class="card">
                         <div class="card__new">
                             <p>Nouveau</p>
