modification of favorite icon

--- a/index.html
+++ b/index.html
@@ -63,61 +63,78 @@
                 <div class="food-cards">
                     <article class="card">
                         <a href="./restaurants/palette.du.gout.html">
-                                <div class="card__new">
-                                    <p>Nouveau</p>
-                                </div>
-                                <div class="card__icon">
-                                    <label>
-                                        <input type="checkbox">
-                                    </label>
-                                </div>
-                                <img src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
-                                <div class="card__content">
-                                    <h3>La palette du goût</h3>
-                                    <p>Ménilmontant</p>
-                                </div>
-                            </a>
-                        </article> 
+                            <img class="card__cover" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
+                            <div class="card__new">
+                                <p>Nouveau</p>
+                            </div>
+                        </a>
+                        <div class="card__bottom">
+                        <a href="./restaurants/palette.du.gout.html">
+                            <div class="card__content">
+                                <h3>La palette du goût</h3>
+                                <p>Ménilmontant</p>
+                            </div>
+                        </a>
+                            <div class="heart">
+                                <img class="empty-heart" src="./assets/images/icons/heartempty.svg" alt="empty heart icon">
+                                <img class="full-heart" src="./assets/images/icons/heartfull.svg" alt="full heart icon">
+                            </div>
+                        </div>
+                    </article> 
                     <article class="card">
-                        <div class="card__new">
-                            <p>Nouveau</p>
-                        </div>
-                        <div class="card__icon">
-                            <label>
-                                <input type="checkbox">
-                            </label>
-                        </div>
-                        <img src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de restaurant">
-                        <div class="card__content">
-                            <h3>La note enchantée</h3>
-                            <p>Charonne</p>
+                        <a href="#">
+                            <img class="card__cover" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de restaurant">
+                            <div class="card__new">
+                                <p>Nouveau</p>
+                            </div>
+                        </a>
+                        <div class="card__bottom">
+                        <a href="#">
+                            <div class="card__content">
+                                <h3>La note enchantée - test</h3>
+                                <p>Charonne</p>
+                            </div>
+                        </a>
+                            <div class="heart">
+                                <img class="empty-heart" src="./assets/images/icons/heartempty.svg" alt="empty heart icon">
+                                <img class="full-heart" src="./assets/images/icons/heartfull.svg" alt="full heart icon">
+                            </div>
                         </div>
                     </article> 
                 </div>
                 <div class="food-cards">
-                    <article class="card">
-                        <div class="card__icon">
-                            <label>
-                                <input type="checkbox" name="checbox">
-                            </label>
-                        </div>
-                        <img src="assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de restaurant">
-                        <div class="card__content">
-                            <h3>À la française</h3>
-                            <p>Cité Rouge</p>
+                        <article class="card">
+                        <a href="#">
+                            <img class="card__cover" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de restaurant">
+                        </a>
+                        <div class="card__bottom">
+                        <a href="#">
+                            <div class="card__content">
+                                <h3>À la française</h3>
+                                <p>Cité Rouge</p>
+                            </div>
+                        </a>
+                            <div class="heart">
+                                <img class="empty-heart" src="./assets/images/icons/heartempty.svg" alt="empty heart icon">
+                                <img class="full-heart" src="./assets/images/icons/heartfull.svg" alt="full heart icon">
+                            </div>
                         </div>
                     </article> 
                     <article class="card">
-                        <div class="card__icon">
-                            <label>
-                                <input type="checkbox">
-                            </label>
-                        </div>
-                        <img src="assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de restaurant">
-                        <div class="card__content">
-                            <h3>Le délice des sens</h3>
-                            <p>Folie-Méricourt</p>
-                            <div class="card__content__icon"></div>
+                        <a href="#">
+                            <img class="card__cover" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de restaurant">
+                        </a>
+                        <div class="card__bottom">
+                        <a href="#">
+                            <div class="card__content">
+                                <h3>Le délice des sens</h3>
+                                <p>Folie-Méricourt</p>
+                            </div>
+                        </a>
+                            <div class="heart">
+                                <img class="empty-heart" src="./assets/images/icons/heartempty.svg" alt="empty heart icon">
+                                <img class="full-heart" src="./assets/images/icons/heartfull.svg" alt="full heart icon">
+                            </div>
                         </div>
                     </article> 
                 </div>
