--- a/restaurants/palette.du.gout.html
+++ b/restaurants/palette.du.gout.html
@@ -24,7 +24,14 @@
                 <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
             </div>
             <section class="menu">
-                <h1>La palette du goût</h1>
+                <div class="menu__title">
+                    <h1>La palette du goût</h1>
+                    <div class="heart">
+                        <img class="empty-heart" src="../assets/images/icons/heartempty.svg" alt="empty heart icon">
+                        <img class="full-heart" src="../assets/images/icons/heartfull.svg" alt="full heart icon">
+                    </div>
+                </div>
+            
                 <div class="entrees">
                     <h2>entrées</h2>
                     <div class="menu__card">
