animation of restaurant page

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         <div class="card__bottom">
                         <a href="#">
                             <div class="card__content">
-                                <h3>La note enchantée - test</h3>
+                                <h3>La note enchantée</h3>
                                 <p>Charonne</p>
                             </div>
                         </a>
