--- a/restaurants/palette.du.gout.html
+++ b/restaurants/palette.du.gout.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div class="cover">
-                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
+                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant" loading="lazy">
             </div>
             <section class="menu">
                 <div class="menu__title">
