add restaurants pages

--- a/restaurants/la.francaise.html
+++ b/restaurants/la.francaise.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/da9e139664.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>La palette du goût</title>
+    <title>A la française</title>
 </head>
 <body>
     <div class="container restaurant">
@@ -21,11 +21,11 @@
         </header>
         <main>
             <div class="cover">
-                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant" loading="lazy">
+                <img src="../assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de restaurant" loading="lazy">
             </div>
             <section class="menu">
                 <div class="menu__title">
-                    <h1>La palette du goût</h1>
+                    <h1>A la française</h1>
                     <div class="heart">
                         <img class="empty-heart" src="../assets/images/icons/heartempty.svg" alt="empty heart icon">
                         <img class="full-heart" src="../assets/images/icons/heartfull.svg" alt="full heart icon">
@@ -36,8 +36,8 @@
                     <h2>entrées</h2>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Fricassée d'escargots</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Tartare de poulpe acidulé</h3>
+                            <p>Aux zestes d'orange</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">25€</div>
@@ -48,8 +48,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3>Velouté de légumes d'antan</h3>
+                            <p>Carotte, panais, topinambour</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">35€</div>
@@ -60,8 +60,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Œuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h3>Soupe à l'oignon</h3>
+                            <p>Revisitée</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">20€</div>
@@ -75,8 +75,8 @@
                     <h2>plats</h2>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Filet de bœuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3>Coquilles Saint-Jacques</h3>
+                            <p>Accompagnées d'une purée de panais</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">40€</div>
@@ -87,8 +87,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Parmentier de queue de bœuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <h3>Magret de canard</h3>
+                            <p>Et parmentier de pommes de terre</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">35€</div>
@@ -99,8 +99,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3>Pigeonneau d’Ille-et-Vilaine</h3>
+                            <p>Sur son lit de gnocchis aux légumes</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">44€</div>
@@ -114,8 +114,8 @@
                     <h2>desserts</h2>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3>Pétales de violettes glacés</h3>
+                            <p>Et purée de noisettes</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">18€</div>
@@ -126,8 +126,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3>Fondant au chocolat</h3>
+                            <p>Revisité</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">22€</div>
@@ -138,8 +138,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Mousse au chocolat</h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3>Millefeuille croustillant</h3>
+                            <p>Myrtilles et pâte d’amande</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">23€</div>
