--- a/restaurants/note.enchantee.html
+++ b/restaurants/note.enchantee.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/da9e139664.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../assets/css/style.css">
-    <title>La palette du goût</title>
+    <title>La note enchantée</title>
 </head>
 <body>
     <div class="container restaurant">
@@ -21,11 +21,11 @@
         </header>
         <main>
             <div class="cover">
-                <img src="../assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant" loading="lazy">
+                <img src="../assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de restaurant" loading="lazy">
             </div>
             <section class="menu">
                 <div class="menu__title">
-                    <h1>La palette du goût</h1>
+                    <h1>La note enchantée</h1>
                     <div class="heart">
                         <img class="empty-heart" src="../assets/images/icons/heartempty.svg" alt="empty heart icon">
                         <img class="full-heart" src="../assets/images/icons/heartfull.svg" alt="full heart icon">
@@ -36,8 +36,8 @@
                     <h2>entrées</h2>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Fricassée d'escargots</h3>
-                            <p>Au piment d'Espelette</p>
+                            <h3>Ravioles de foie gras</h3>
+                            <p>Accompagnées de leur crème à la truffe</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">25€</div>
@@ -48,8 +48,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Foie gras de canard mi-cuit</h3>
-                            <p>Et ses copeaux de truffe noire</p>
+                            <h3>Caviar osciètre</h3>
+                            <p>Sur blini à la farine de blé noir</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">35€</div>
@@ -60,11 +60,23 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Œuf au plat</h3>
-                            <p>Assaisonné à la truffe sur lit de caviar</p>
+                            <h3>Homard et espuma de potiron</h3>
+                            <p>Marinés aux zestes d'orange</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">20€</div>
+                            <div class="add">
+                                <i class="fa-solid fa-circle-check fa-lg"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="menu__card">
+                        <div class="menu__card__text">
+                            <h3>Foie gras de canard cuit entier</h3>
+                            <p>Confiture de figue et pain toasté</p>
+                        </div>
+                        <div class="menu__card__right">
+                            <div class="price">35€</div>
                             <div class="add">
                                 <i class="fa-solid fa-circle-check fa-lg"></i>
                             </div>
@@ -75,8 +87,8 @@
                     <h2>plats</h2>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Filet de bœuf aux herbes</h3>
-                            <p>Accompagné de sa ribambelle de légumes</p>
+                            <h3>Noix de coquilles Saint-Jacques</h3>
+                            <p>Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">40€</div>
@@ -87,8 +99,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Parmentier de queue de bœuf</h3>
-                            <p>À la truffe noire sur sa purée de panais</p>
+                            <h3>Langoustine poêlée</h3>
+                            <p>Purée de patate douce</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">35€</div>
@@ -99,8 +111,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Filet de turbot</h3>
-                            <p>Aux agrumes</p>
+                            <h3>Mijoté de queue de bœuf</h3>
+                            <p>Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">44€</div>
@@ -114,8 +126,8 @@
                     <h2>desserts</h2>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Paris-Brest</h3>
-                            <p>Revisité</p>
+                            <h3>Macaron noisette et chocolat</h3>
+                            <p>Glace au caramel brun et sel de Guérande</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">18€</div>
@@ -126,8 +138,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Macaron au chocolat d'exception</h3>
-                            <p>Et glace à la vanille de Madagascar</p>
+                            <h3>Baba au rhum revisité</h3>
+                            <p>Avec son coulis de citron</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">22€</div>
@@ -138,8 +150,8 @@
                     </div>
                     <div class="menu__card">
                         <div class="menu__card__text">
-                            <h3>Mousse au chocolat</h3>
-                            <p>Au piment d'Espelette et à la truffe noire</p>
+                            <h3>Tarte au citron meringuée </h3>
+                            <p>Déstructurée</p>
                         </div>
                         <div class="menu__card__right">
                             <div class="price">23€</div>
