--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-<!--         <div class="loader">
+        <div class="loader">
             <div class="clock">
                 <div class="clock__center"></div>
                 <div class="clock__little">
@@ -24,7 +24,7 @@
                 </div>
                 <div class="loader__logo">ohmyfood</div>
             </div>
-        </div> -->
+        </div>
         <header>
             <div class="header__title">ohmyfood</div>
         </header>
