clean Sass architecture

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="container">
+        <!-- loader -->
         <div class="loader">
             <div class="clock">
                 <div class="clock__center"></div>
@@ -24,6 +25,7 @@
                 </div>
             </div>
         </div>
+        <!-- header -->
         <header>
             <div class="header__title">ohmyfood</div>
         </header>
@@ -57,6 +59,7 @@
                      </li>
                 </ol>
             </section>
+            <!-- food -->
             <section class="food">
                 <h2>Restaurants</h2>
                 <div class="food-cards">
@@ -139,7 +142,8 @@
                 </div>
             </section>
         </main>
-        <footer class="footer"> <!-- à revoir -->
+        <!-- footer -->
+        <footer class="footer">
             <div class="footer__logo">ohmyfood</div>
             <ul>
                 <li class="footer__link">
