--- a/restaurants/delice.des.sens.html
+++ b/restaurants/delice.des.sens.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="container restaurant">
+        <!-- header -->
         <header>
             <div class="header__title">ohmyfood</div>
             <div class="header__icon">
@@ -23,6 +24,7 @@
             <div class="cover">
                 <img src="../assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de restaurant" loading="lazy">
             </div>
+            <!-- menu -->
             <section class="menu">
                 <div class="menu__title">
                     <h1>Le délice des sens</h1>
@@ -31,7 +33,6 @@
                         <img class="full-heart" src="../assets/images/icons/heartfull.svg" alt="full heart icon">
                     </div>
                 </div>
-            
                 <div class="entrees">
                     <h2>entrées</h2>
                     <div class="menu__card">
@@ -151,8 +152,8 @@
                 </div>
                 <a class="btn btn__menu" href="#">Commander</a>
             </section>
-
         </main>
+        <!-- footer --->
         <footer class="footer">
             <div class="footer__logo">ohmyfood</div>
             <ul>
