--- a/restaurants/palette.du.gout.html
+++ b/restaurants/palette.du.gout.html
@@ -13,6 +13,7 @@
 </head>
 <body>
     <div class="container restaurant">
+        <!-- header -->
         <header>
             <div class="header__title">ohmyfood</div>
             <div class="header__icon">
@@ -31,7 +32,6 @@
                         <img class="full-heart" src="../assets/images/icons/heartfull.svg" alt="full heart icon">
                     </div>
                 </div>
-            
                 <div class="entrees">
                     <h2>entrées</h2>
                     <div class="menu__card">
@@ -151,8 +151,8 @@
                 </div>
                 <a class="btn btn__menu" href="#">Commander</a>
             </section>
-
         </main>
+        <!-- footer -->
         <footer class="footer">
             <div class="footer__logo">ohmyfood</div>
             <ul>
