--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
                 <h2>Restaurants</h2>
                 <div class="food-cards">
                     <article class="card">
-                        <a href="./restaurants/palette.du.gout.html">
+                        <a href="./restaurants/palette-du-gout.html">
                             <img class="card__cover" src="assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="image de restaurant">
                             <div class="card__new">
                                 <p>Nouveau</p>
                             </div>
                         </a>
                             <div class="card__bottom">
-                                <a href="./restaurants/palette.du.gout.html">
+                                <a href="./restaurants/palette-du-gout.html">
                                     <div class="card__content">
                                         <h3>La palette du goût</h3>
                                         <p>Ménilmontant</p>
@@ -84,14 +84,14 @@
                             </div>
                     </article> 
                     <article class="card">
-                        <a href="./restaurants/note.enchantee.html">
+                        <a href="./restaurants/note-enchantee.html">
                             <img class="card__cover" src="assets/images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="image de restaurant">
                             <div class="card__new">
                                 <p>Nouveau</p>
                             </div>
                         </a>
                         <div class="card__bottom">
-                        <a href="./restaurants/note.enchantee.html">
+                        <a href="./restaurants/note-enchantee.html">
                             <div class="card__content">
                                 <h3>La note enchantée</h3>
                                 <p>Charonne</p>
@@ -106,11 +106,11 @@
                 </div>
                 <div class="food-cards">
                         <article class="card">
-                        <a href="./restaurants/la.francaise.html">
+                        <a href="./restaurants/la-francaise.html">
                             <img class="card__cover" src="./assets/images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="image de restaurant">
                         </a>
                         <div class="card__bottom">
-                        <a href="./restaurants/la.francaise.html">
+                        <a href="./restaurants/la-francaise.html">
                             <div class="card__content">
                                 <h3>À la française</h3>
                                 <p>Cité Rouge</p>
@@ -123,11 +123,11 @@
                         </div>
                     </article> 
                     <article class="card">
-                        <a href="./restaurants/delice.des.sens.html">
+                        <a href="./restaurants/delice-des-sens.html">
                             <img class="card__cover" src="./assets/images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="image de restaurant">
                         </a>
                         <div class="card__bottom">
-                        <a href="./restaurants/delice.des.sens.html">
+                        <a href="./restaurants/delice-des-sens.html">
                             <div class="card__content">
                                 <h3>Le délice des sens</h3>
                                 <p>Folie-Méricourt</p>
